package com.mediator.characteristics;

/**
 *
 * @author andrebronca
 */
public class SoilRemoval {
    
    public void low(){
        System.out.println("Setting Soil Removal to low");
    }
    
    public void medium(){
        System.out.println("Setting Soil Removal to medium");
    }
    
    public void high(){
        System.out.println("Setting Soil Removal to high");
    }
}
