package com.mediator.interfaces;

/**
 *
 * @author andrebronca
 */
public interface Colleague {
    public void setMediator(MachineMediator mediator);
}
